--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "javeat-front",
   "version": "0.1.0",
   "private": true,
-  "proxy":3000,
+  "proxy":"3000",
     "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
