--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "express": "^4.18.3",
     "jotai": "^2.6.5",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
